src/components/Main/Splash/style.css
#splash {
  position: relative;
  box-sizing: border-box;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 8vmin;
}

#splash h1 {
  font-family: 'Movement', sans-serif;
  font-variation-settings: 'wght' 700, 'SPAC' 100;
  margin: 1.8rem 0 .8rem;
}

.splash-img > img {
  --max-size: 250;
  --min-size: 150;
  width: var(--responsive);
}

.splash-brief h2 {
  font-weight: 300;
  color: #455261;
}

.scroll-btn {
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
  bottom: 2rem;
  --max-size: 32;
  --min-size: 26;
  font-size: var(--responsive);
  font-family: 'Movement', sans-serif;
  color: #59bbb2;
  font-variation-settings: 'wght' 300, 'SPAC' 110;
  transition: .3s font-variation-settings ease;
  cursor: default;
}

.scroll-btn:hover {
  font-variation-settings: 'wght' 800, 'SPAC' 100;
}


@media screen and (max-height: 560px) {
  #splash {
    height: 560px;
  }
}

